--- a/src/assets/css/reset.css
+++ b/src/assets/css/reset.css
@@ -26,8 +26,10 @@ table{border-collapse:collapse;border-spacing:0}
 body {
   font-family: "Microsoft YaHei", "微软雅黑", "Helvetica Neue", arial, '\5b8b\4f53';
   background-color: #fff;
-  font-size: 12px;
-  color: #333;
+  /*font-size: 12px;*/
+  color: #000;
+  max-width: 640px;
+  margin: 0 auto;
 }
 
 [v-cloak] {
@@ -47,4 +49,8 @@ html, body {
 
 .bgWhite {
   background: #fff !important;
+}
+
+.silver {
+  background: #f4f3f3;
 }
